mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Section titre-->
+    <header>
+        <h1>ELOM BLESS KOUDJONOU</h1>
+        <h2>Etudiant en deuxième année IRT</h2>
+        <p>@: elombless174@gmail.com | Tel: 0194319301</p>
+    </header>
 </body>
 </html>
