mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Section description-->
+    <section>
+        <h2>Etudiant</h2>
+        <p>Etudiant en deuxième année en informatique, je suis passionné par la tech. Un an d'expériance dans le developpement web, je suis à la recherche de nouveaux defits.</p>
+    </section>
 </body>
 </html>
