mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Section formations-->
+    <section>
+        <h2>Formations</h2>
+        <article>
+            <h3>Formation en informatique de base et design</h3>
+            <p><strong>IMA(Institut de Multimedia Appliqué)</strong></p>
+            <p><em>2023 six mois</em></p>
+        </article>
+        <article>
+            <h3>Baccalaureat</h3>
+            <p><strong>CEG akpakpa centre</strong></p>
+            <p><em>2016-2023</em></p>
+        </article>
+        <article>
+            <h3>actuellement à ESGIS BENIN</h3>
+        </article>
+    </section>
 </body>
 </html>
