mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Section competences-->
+    <section>
+        <h2>Competences</h2>
+        <h3>Techniques</h3>
+        <ul>
+            <li>Langage de programmation python: maîtrise partielle</li>
+            <li>Maîtrise de word, excel et powerpoint</li>
+        </ul>
+        <h3>Lingustiques</h3>
+        <ul>
+            <li>Minan: langue maternelle</li>
+            <li>Français: courant</li>
+            <li>Anglais: niveau B2</li>
+        </ul>
+        <h3>Professionnelles</h3>
+        <ul>
+            <li>Travail d'equipe</li>
+            <li>Gestion de projet</li>
+            <li>Resolution de probleme</li>
+            <li>Communication</li>
+        </ul>
+    </section>
 </body>
 </html>
