--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Sectionassociations-->
+    <section>
+        <h2>Aucuns engagements associatifs</h2>
+    </section>
 </body>
 </html>
